crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__binary_expression_left_operand_trailing_end_of_line_comment.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ExprConstant,
        range: 11..12,
        source: `5`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing left comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ExprBinOp,
        range: 11..104,
        source: `5 # trailing left comment⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# trailing operator comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: ExprConstant,
        range: 103..104,
        source: `3`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading right comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
