crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__dangling_comment.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Arguments,
        range: 9..39,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Some comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
}
