crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__fmt_skip_applies_to_entire_compound_statement.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtIf,
        range: 1..15,
        source: `if True: x = 0`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# fmt: skip",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: StmtFunctionDef,
        range: 30..120,
        source: `def foo(self, lorem, ipsum,..., do): ...`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# fmt: skip",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: StmtExpr,
        range: 162..165,
        source: `...`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# fmt: skip",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
}
