crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__non_positional_arguments_with_defaults.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Arguments,
        range: 9..179,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Positional arguments only after here",
                position: OwnLine,
                formatted: false,
            },
            SourceComment {
                text: "# trailing positional argument comment.",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: ExprConstant,
        range: 17..19,
        source: `10`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing positional comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: Arg,
        range: 173..174,
        source: `b`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading comment for b",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
